--- a/app/Tpl/fanwe/mobile/mobile_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_index.html
@@ -30,9 +30,9 @@
         </script><div class="cis_sitenv">
             <ul class="cl">
                 <li><a href="{$APP_ROOT}/youhui.php?ctl=store"><img src="{$TMPL}/images/mobile/n1.png" /><br />店铺</a></li>
-                <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&list_type=1"><img src="{$TMPL}/images/mobile/n1.png" /><br />新品</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&order=hot"><img src="{$TMPL}/images/mobile/n1.png" /><br />热门</a></li>
-                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&order=best"><img src="{$TMPL}/images/mobile/n1.png" /><br />推荐</a></li>
+                <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&cid=0"><img src="{$TMPL}/images/mobile/n1.png" /><br />新品</a></li>
+                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=hot"><img src="{$TMPL}/images/mobile/n1.png" /><br />热门</a></li>
+                <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=recommend"><img src="{$TMPL}/images/mobile/n1.png" /><br />推荐</a></li>
                 <li><a href="{$APP_ROOT}/youhui.php?ctl=event"><img src="{$TMPL}/images/mobile/n1.png" /><br />活动</a></li>
                 <li><a href="{$APP_ROOT}/youhui.php?ctl=fcate"><img src="{$TMPL}/images/mobile/n1.png" /><br />优惠</a></li>
                 <li><a href="{$APP_ROOT}/tuan.php"><img src="{$TMPL}/images/mobile/n1.png" /><br />团购</a></li>
@@ -58,7 +58,7 @@
             <div id="container" style="background: #f5f5f5;">
             </div>
             <div class="waterfall-more pgbtn" style="display: none; padding:0;">
-                <a href="">查看更多商品 »</a>
+                <a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&cid=0">查看更多商品 »</a>
             </div>
             <script>
                 $('#container').waterfall({
@@ -69,7 +69,7 @@
                     checkImagesLoaded: true,
                     maxPage: 4,
                     path: function(page) {
-                        return '{url x="index" r="ajax", p="act=waterfall_products"}' + '&page=' + page;
+                        return '{url x="index" r="ajax", p="act=waterfall_products"}' + '&page=' + page + '&type=home';
                     },
                     callbacks: {
                         /*
@@ -112,7 +112,16 @@
                          */
                         renderData: function (data, dataType) {
                             var tpl,
-                                    template;
+                                    template,
+                                    resultNum = data.total;
+                            console.log(resultNum);
+                            resultNum = parseInt(resultNum);
+                            if ( resultNum == 0) {
+                                $('#container').waterfall('pause', function() {
+                                    console.log('no more data');
+                                    $('.waterfall-more').show();
+                                });
+                            }
 
                             if ( dataType === 'json' ||  dataType === 'jsonp'  ) { // json or jsonp format
                                 tpl = $('#waterfall-tpl').html();
