--- a/admin/Tpl/default/SupplierLocation/edit.html
+++ b/admin/Tpl/default/SupplierLocation/edit.html
@@ -85,6 +85,10 @@ var red_point = "__ROOT__/system/red_point.png";
 		</td>
 	</tr>
 	<tr>
+		<td class="item_title">消费积分比:</td>
+		<td class="item_input"><input type="text" class="textbox number numeric" name="consumption_ratio" value="{$vo.consumption_ratio}" />%</td>
+	</tr>
+	<tr>
 		<td class="item_title">{%LOCATION_BRAND}:</td>
 		<td class="item_input">
 			<foreach name="brand_list" item="brand">
