--- a/app/Tpl/fanwe/biz/biz_header.html
+++ b/app/Tpl/fanwe/biz/biz_header.html
@@ -50,7 +50,7 @@ var send_span = {function name="app_conf" v="SEND_SPAN"}000;
 				<span style="display:inline-block; width:185px; height:65px; background:url({$TMPL}/images/biz/biz_logo.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src={$TMPL}/images/biz_logo.png, sizingMethod=scale);_background-image:none;"></span>
 			</a>
 		</div>
-		<div class="biz_title_logo" style="width:720px;"></div>		
+		<div class="biz_title_logo" style=""></div>
 		<div class="f_r" style="text-align:right; margin-right:20px; width:100px; height:20px;">
 
 		</div>
