--- a/app/Tpl/fanwe/biz/biz_nav.html
+++ b/app/Tpl/fanwe/biz/biz_nav.html
@@ -1,4 +1,5 @@
-<div class="wrap">
+<style>.wrap{width:1056px;}</style>
+<div class="wrap" style="width: 1056px;">
 			<div class="f_r" style="line-height:20px; margin-top:-20px; color:#000;">
 					{if $account_data}
 					{$LANG.HELLO}：{$account_data.account_name}
