--- a/app/Tpl/fanwe/mobile/index/youhui_home.html
+++ b/app/Tpl/fanwe/mobile/index/youhui_home.html
@@ -1,8 +1,8 @@
 {if $youhui_list}
 <div class="blank"></div>
 <div class="cis_box">
-    <h3 onclick="goto('{url x="youhui" r="fcate"}')"><img src="http://leshi.lo/app/Tpl/fanwe/images/mobile/more.png" class="more">
-    <span><img src="http://leshi.lo/app/Tpl/fanwe/images/mobile/coupon.png">优惠券下载</span></h3>
+    <h3 onclick="goto('{url x="youhui" r="fcate"}')"><img src="{$TMPL}/images/mobile/more.png" class="more">
+    <span><img src="{$TMPL}/images/mobile/coupon.png">优惠券下载</span></h3>
     <div class="cis_trowlist couponlist">
         <ul class="cl">
             {foreach from=$youhui_list item=youhui_item key=key}
