--- a/app/Tpl/fanwe/mobile/mobile_goods_list.html
+++ b/app/Tpl/fanwe/mobile/mobile_goods_list.html
@@ -80,7 +80,7 @@
                                 resultNum = data.total;
                         console.log(resultNum);
                         resultNum = parseInt(resultNum);
-                        if ( resultNum == 0) {
+                        if ( resultNum < 6) {
                             $('#container').waterfall('pause', function() {
                                 console.log('no more data');
                             });
