--- a/app/Tpl/fanwe/mobile/inc/header_feature1.html
+++ b/app/Tpl/fanwe/mobile/inc/header_feature1.html
@@ -2,7 +2,7 @@
     <ul class="cl">
         <li><a href="javascript:;" onClick="showtop('map','search')"><img src="{$TMPL}/images/mobile/tm1.png"></a></li>
         <li><a href="javascript:;" onClick="showtop('search','map')"><img src="{$TMPL}/images/mobile/tm2.png"></a></li>
-        <li><a href="v.php?mod=uc&amp;mobile=2"><img src="{$TMPL}/images/mobile/tm3.png"></a></li>
+        <li><a href="{$APP_ROOT}/index.php?ctl=uc_center"><img src="{$TMPL}/images/mobile/tm3.png"></a></li>
     </ul>
     <h2>
         <a href="/"><img src="{$TMPL}/images/mobile/logo.png"></a>
@@ -11,15 +11,16 @@
 <div id="map_menu" style="display:none" class="cis_sitemap"><h3>微店导航</h3><div class="cis_sitenv">
     <ul class="cl">
         <li><a href="{$APP_ROOT}/youhui.php?ctl=store"><img src="{$TMPL}/images/mobile/n1.png" /><br />店铺</a></li>
-        <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&list_type=1"><img src="{$TMPL}/images/mobile/n1.png" /><br />新品</a></li>
-        <li><a href="{$APP_ROOT}/youhui.php?ctl=store&order=hot"><img src="{$TMPL}/images/mobile/n1.png" /><br />热门</a></li>
-        <li><a href="{$APP_ROOT}/youhui.php?ctl=store&order=best"><img src="{$TMPL}/images/mobile/n1.png" /><br />推荐</a></li>
+        <li><a href="{$APP_ROOT}/index.php?ctl=goods&act=goods_list&cid=0"><img src="{$TMPL}/images/mobile/n1.png" /><br />新品</a></li>
+        <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=hot"><img src="{$TMPL}/images/mobile/n1.png" /><br />热门</a></li>
+        <li><a href="{$APP_ROOT}/youhui.php?ctl=store&aid=&cid=&type=recommend"><img src="{$TMPL}/images/mobile/n1.png" /><br />推荐</a></li>
         <li><a href="{$APP_ROOT}/youhui.php?ctl=event"><img src="{$TMPL}/images/mobile/n1.png" /><br />活动</a></li>
         <li><a href="{$APP_ROOT}/youhui.php?ctl=fcate"><img src="{$TMPL}/images/mobile/n1.png" /><br />优惠</a></li>
         <li><a href="{$APP_ROOT}/tuan.php"><img src="{$TMPL}/images/mobile/n1.png" /><br />团购</a></li>
         <li><a href="{$APP_ROOT}/index.php?ctl=uc_center"><img src="{$TMPL}/images/mobile/n1.png" /><br />我的</a></li>
     </ul>
-</div><h3>网站地图</h3>
+</div>
+    <!--<h3>网站地图</h3>
     <div class="cis_shownv">
         <ul class="cl">
             <li><a href="#"><span>自定义</span></a></li>
@@ -27,7 +28,7 @@
             <li><a href="#"><span>自定义</span></a></li>
             <li><a href="#"><span>自定义</span></a></li>
         </ul>
-    </div>
+    </div>-->
 </div>
 <div id="search_menu" style="display:none" class="cis_search">
     <form action="v.php?mod=search" method="get">
