--- a/app/Tpl/fanwe/mobile/inc/mobile_header.html
+++ b/app/Tpl/fanwe/mobile/inc/mobile_header.html
@@ -6,10 +6,9 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="keywords" content="微店,品牌店铺,商盟" />
     <meta name="description" content="本地一体化店铺系统 ,乐时网演示站" />
-    <title>微店 -  乐时网演示站 -  手机版 - Powered by Discuz!</title>
+    <title>微店 -  乐时网演示站 -  手机版</title>
     <?php
     $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/mobile_style.css";
-    $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/reset.css";
     $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/waterfall.css";
     $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery-1.8.3.min.js";
     $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.flexslider-min.js";
@@ -59,4 +58,5 @@
             }
         }
     </script>
+    <script type="text/javascript" src="/public/runtime/app/lang.js"></script>
 </head>
