--- a/admin/Tpl/default/Index/main.html
+++ b/admin/Tpl/default/Index/main.html
@@ -109,7 +109,7 @@
 				{%GET_MORE_INFO}
 			</td>
 			<td class="item_input">
-				请访问 <a href="http://www.unvweb.com" target="_blank" title="花都商业联盟系统">http://www.unvweb.com</a>
+				请访问 <a href="http://m-ebuy.com" target="_blank" title="花都商业联盟系统">http://m-ebuy.com</a>
 			</td>
 		</tr>
 		<tr>
