--- a/app/Tpl/fanwe/inc/header.html
+++ b/app/Tpl/fanwe/inc/header.html
@@ -14,10 +14,13 @@
 <?php
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/style.css";
 $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/weebox.css";
+$this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/datepicker.css";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.bgiframe.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.weebox.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.pngfix.js";
+$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.ui.core.js";
+$this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/jquery.ui.datepicker.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/lazyload.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/script.js";
 $this->_var['pagejs'][] = $this->_var['TMPL_REAL']."/js/op.js";
