--- a/app/Tpl/fanwe/user_register.html
+++ b/app/Tpl/fanwe/user_register.html
@@ -1,4 +1,35 @@
-{include file="inc/header.html"} 
+{include file="inc/header.html"}
+<style>
+	.btn-default {
+		color: #333;
+		background-color: #fff;
+		border-color: #ccc;
+		color: #fff;
+		background-color: #337ab7;
+		border-color: #2e6da4;
+	}
+	.btn {
+		display: inline-block;
+		padding: 6px 12px;
+		margin-bottom: 0;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 1.42857143;
+		text-align: center;
+		white-space: nowrap;
+		vertical-align: middle;
+		-ms-touch-action: manipulation;
+		touch-action: manipulation;
+		cursor: pointer;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		background-image: none;
+		border: 1px solid transparent;
+		border-radius: 4px;
+	}
+</style>
 <div class="blank"></div>
 
 	<div class="inc" style="border:none;">
@@ -37,11 +68,71 @@
 								<div class="field mobile">
 									<label for="signup-mobile">{$LANG.USER_TITLE_MOBILE}</label>
 									<input type="text" value="" class="f-input ipttxt" id="settings-mobile" name="mobile" size="30">
-									<span class="f-input-tip"></span> 
+									<span class="f-input-tip"></span>
 									<span class="hint"> {$LANG.USER_TITLE_MOBILE_TIP}</span>
-								</div>			
-								<div class="blank1"></div>
-								
+								</div>
+                                <div class="blank1"></div>
+                                <div class="field vcode">
+                                    <label for="vcode">手机验证码</label>
+									<input type="text" value="" class="f-input ipttxt" id="vcode" name="vcode" size="30">
+                                    <input type="button" value="发送验证码" id="vcode-btn" class="btn btn-default" onclick="sms_send()"/>
+                                    <span class="f-input-tip"></span>
+                                    <span class="hint"> </span>
+                                </div>
+                                <script>
+                                    var sms_send = function () {
+                                        $.ajax( {
+                                            url: APP_ROOT+"/shop.php?ctl=ajax&act=sms_register",
+                                            type: 'get',
+                                            data: {'mobile': $('#settings-mobile').val()},
+                                            success: function (text) {
+                                                json = eval("("+text+")");
+                                                if(json.state == 'error'){
+                                                    $('#vcode-btn').val('发送验证码');
+                                                    $('#vcode-btn').removeAttr('disabled');
+                                                    alert(json.message);
+                                                }
+                                                else if(json.state == 'success')
+                                                {
+                                                    $('#vcode-btn').attr('disabled', 'disabled');
+                                                    countdown();
+                                                }
+
+                                            }
+                                        } );
+                                    }
+                                    var countdown = function () {
+                                        var timer = 60;
+                                        setInterval(function () {
+                                            if (timer > 0) {
+                                                $('#vcode-btn').val(timer+"秒后再次发送");
+                                                timer --;
+                                            } else {
+                                                $('#vcode-btn').val("发送验证码");
+                                                $('#vcode-btn').removeAttr('disabled');
+                                            }
+                                        }, 1000);
+                                    }
+                                </script>
+                                <div class="blank1"></div>
+                                <div class="field gender">
+                                    <label for="sex">性别</label>
+									<select name="sex" class="f-input">
+										<option value="1">男</option>
+										<option value="0">女</option>
+									</select>
+                                    <span class="f-input-tip"></span>
+                                    <span class="hint"> </span>
+                                </div>
+                                <div class="blank1"></div>
+				<div class="field gender">
+					<label for="sex">出生日期</label>
+					<input name="bdate" class="f-input ipttxt datepicker" id="bdate"/>
+					<span class="f-input-tip"></span>
+					<span class="hint"> </span>
+				</div>
+				<div class="blank1"></div>
+
 								
 								{foreach from=$field_list item=field_item}
 								<div class="field">
@@ -104,7 +195,15 @@ $(document).ready(function(){
 			
 			return false;
 		}
-		
+
+		/*if($.trim($("#vcode").val()).length == 0)
+		{
+			$("#vcode").focus();
+			$.showErr("{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="手机验证码"}");
+
+			return false;
+		}*/
+
 		if(!$.checkEmail($("#signup-email-address").val()))
 		{
 			$("#signup-email-address").focus();			
@@ -145,7 +244,14 @@ $(document).ready(function(){
 			$("#settings-mobile").focus();			
 			$.showErr("{function name="sprintf" format=$LANG.FORMAT_ERROR_TIP value=$LANG.USER_TITLE_MOBILE}");	
 			return false;
-		}	
+		}
+
+        if ($.trim($("#bdate").val()).length == 0) {
+            $.showErr( "{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="出生日期"}" );
+
+            return false;
+        } else {
+        }
 
 		{if app_conf("MOBILE_MUST") eq 1}
 			if($.trim($("#settings-mobile").val()).length == 0)
@@ -180,7 +286,7 @@ $(document).ready(function(){
 			formError($("#signup-email-address"),"{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value=$LANG.USER_TITLE_EMAIL}");			
 			return false;
 		}
-		
+
 		if(!$.checkEmail($("#signup-email-address").val()))
 		{
 			formError($("#signup-email-address"),"{function name="sprintf" format=$LANG.FORMAT_ERROR_TIP value=$LANG.USER_TITLE_EMAIL}");
@@ -308,10 +414,28 @@ $(document).ready(function(){
 					return false;
 				}
 			}
-		});	
+		});
 	}); //手机验证
-	
-	
+		/*$("#vcode").bind("blur",function() {
+			if ($.trim($("#vcode").val()).length == 0) {
+				formError($("#vcode"), "{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="手机验证码"}" );
+
+				return false;
+			} else {
+				formSuccess($("#vcode"),"");
+			}
+		});*/
+
+        $("#bdate").bind("blur",function() {
+         if ($.trim($("#bdate").val()).length == 0) {
+         formError($("#bdate"), "{function name="sprintf" format=$LANG.EMPTY_ERROR_TIP value="出生日期"}" );
+
+         return false;
+         } else {
+         formSuccess($("#bdate"),"");
+         }
+         });
+
 	
 	{foreach from=$field_list item=field_item}
 			{if $field_item.is_must eq 1}			
@@ -326,5 +450,6 @@ $(document).ready(function(){
 			{/if}
 	{/foreach}
 });
+        $("input[name='bdate']").datepicker({showAnim:'fadeIn'});
 </script>
 {include file="inc/footer.html"}
