--- a/app/Tpl/fanwe/index - ∏±±æ.html
+++ b/app/Tpl/fanwe/index - ∏±±æ.html
@@ -29,7 +29,7 @@ div.hover{
 	z-index:988;
 }
 span.rp_shuffle{
-	background:#222 url(/images/rightad/shuffle.png) no-repeat 10px 50%;
+	background:#222 url(/images/rightAd/shuffle.png) no-repeat 10px 50%;
 	width:28px;
 	height:14px;
 	display:block;
@@ -95,7 +95,7 @@ span.rp_links{
 	display:block;
 }
 span.rp_links a{
-	background: #222 url(/images/rightad/bgbutton.png) repeat-x;
+	background: #222 url(/images/rightAd/bgbutton.png) repeat-x;
 	padding: 2px 15px;
 	font-size:10px;
 	color: #fff;
