mobile style, pc web goods

--- a/app/Tpl/fanwe/index.html
+++ b/app/Tpl/fanwe/index.html
@@ -589,7 +589,7 @@ $this->_var['indexcss'][] = $this->_var['TMPL_REAL']."/css/index.css";
 	</div>
 </div><!--end index_left-->
 <div class="index_right f_r">
-	<a href="{url x="shop" r="mobile"}" target="_blank" title="手机客户端下载" class="index_mobile_download"></a>
+	<a href="javascript:void(0);" bakhref="{url x="shop" r="mobile"}" target="_blank" title="手机客户端下载" class="index_mobile_download"></a>
 	{insert name="load_index_daren_list" }
 	{$right_html}
 	{$right_dp_html}
