--- a/app/Tpl/fanwe/index/index_left_youhui.html
+++ b/app/Tpl/fanwe/index/index_left_youhui.html
@@ -24,10 +24,10 @@
 				<a href="{url x="youhui" r="fdetail" p="id=$youhui_item.id"}" title="{$youhui_item.name}" target="_blank" class="title_link">{function name="msubstr" v=$youhui_item.name b=0 e=8}</a>
 				<div class="blank"></div>
 				<div class="index_tuan_price" style="width:150px;">
-					<div class="f_l">现价：<span style="color:#000; font-size:14px; font-weight:normal; font-family:verdana;">{$youhui_item.current_price_format}</span></div>
+					<div class="f_l">商城价：<span style="color:#000; font-size:14px; font-weight:normal; font-family:verdana;">{$youhui_item.current_price_format}</span></div>
 				</div>
 				<div class="index_tuan_price" style="width:150px;">
-					<div class="f_l">积分：<span style="color:#f30;  font-size:14px; font-weight:bolder; font-family:verdana;">{$youhui_item.price_score}</span>分</div>
+					<div class="f_l">兑换积分：<span style="color:#f30;  font-size:14px; font-weight:bolder; font-family:verdana;">{$youhui_item.price_score}</span>分</div>
 				</div>
 			</div>
 			{/foreach}
