--- a/app/Tpl/fanwe/index/index_left_youhui.html
+++ b/app/Tpl/fanwe/index/index_left_youhui.html
@@ -19,9 +19,9 @@
 			{foreach from=$youhui_list item=youhui_item key=key}
 			<div class="sector_4 index_youhui_item" style="height:176px;{if $key mod 5 eq 4}border-right:none; width:192px;{/if} {if $key gt (count($youhui_list) - 1 - (count($youhui_list) mod 5))}border-bottom:none;{/if}">
 				<div class="youhui_tag_{$youhui_item.youhui_type}"></div>
-				<a href="{url x="youhui" r="fdetail" p="id=$youhui_item.id"}" title="{$youhui_item.name}" target="_blank"><img src="{function name="get_spec_image" v=$youhui_item.icon w=150 h=110 g=1}" width="150" height="110" alt="{$youhui_item.name}" class="lazy" /></a>
+				<a href="{url x="shop" r="goods" p="id=$youhui_item.id"}" title="{$youhui_item.name}" target="_blank"><img src="{function name="get_spec_image" v=$youhui_item.icon w=150 h=110 g=1}" width="150" height="110" alt="{$youhui_item.name}" class="lazy" /></a>
 				<div class="blank"></div>
-				<a href="{url x="youhui" r="fdetail" p="id=$youhui_item.id"}" title="{$youhui_item.name}" target="_blank" class="title_link">{function name="msubstr" v=$youhui_item.name b=0 e=8}</a>
+				<a href="{url x="shop" r="goods" p="id=$youhui_item.id"}" title="{$youhui_item.name}" target="_blank" class="title_link">{function name="msubstr" v=$youhui_item.name b=0 e=8}</a>
 				<div class="blank"></div>
 				<div class="index_tuan_price" style="width:150px;">
 					<div class="f_l">商城价：<span style="color:#000; font-size:14px; font-weight:normal; font-family:verdana;">{$youhui_item.current_price_format}</span></div>
