--- a/admin/Tpl/default/Deal/shop_add.html
+++ b/admin/Tpl/default/Deal/shop_add.html
@@ -220,6 +220,10 @@
 		<td class="item_input"><input type="text" class="textbox" name="current_price" value="" /></td>
 	</tr>
 	<tr class="buy_type_0">
+		<td class="item_title">兑换积分:</td>
+		<td class="item_input"><input type="number" class="textbox" name="price_score" value="" /></td>
+	</tr>
+	<tr class="buy_type_0">
 		<td class="item_title">{%DEAL_RETURN_MONEY}:</td>
 		<td class="item_input">
 			<input type="text" class="textbox" name="return_money" value="" />
