--- a/admin/Tpl/default/Deal/shop_edit.html
+++ b/admin/Tpl/default/Deal/shop_edit.html
@@ -219,6 +219,10 @@
 		<td class="item_input"><input type="text" class="textbox" name="current_price" value="{$vo.current_price}" /></td>
 	</tr>
 	<tr class="buy_type_0">
+		<td class="item_title">兑换积分:</td>
+		<td class="item_input"><input type="text" class="textbox" name="price_score" value="{$vo.price_score}" /></td>
+	</tr>
+	<tr class="buy_type_0">
 		<td class="item_title">{%DEAL_RETURN_MONEY}:</td>
 		<td class="item_input">
 			<input type="text" class="textbox" name="return_money" value="{$vo.return_money}" />
