goods is best  home

--- a/app/Tpl/fanwe/index.html
+++ b/app/Tpl/fanwe/index.html
@@ -469,16 +469,16 @@ $this->_var['indexcss'][] = $this->_var['TMPL_REAL']."/css/index.css";
               </ul>
 				<ul class="tab-panel">
                     <!--<li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/youhui.php?ctl=edetail&id=6" target="_blank"><img src="images/img01.jpg" /></a></li>-->
-				<li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/xiaojz" target="_blank"><img src="images/img01.jpg" /></a></li>
+				<li class="w980h490" style="top:0;left:0;"><a href="http://apple.com" target="_blank"><img src="images/img01.jpg" /></a></li>
             </ul>
 				<ul class="tab-panel">
-                    <li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/xiaojz" target="_blank"><img src="images/img-02.jpg" /></a></li>
+                    <li class="w980h490" style="top:0;left:0;"><a href="http://apple.com" target="_blank"><img src="images/img-02.jpg" /></a></li>
                 </ul>
                 <ul class="tab-panel">
-                    <li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/xiaojz" target="_blank"><img src="images/img-03.jpg" /></a></li>
+                    <li class="w980h490" style="top:0;left:0;"><a href="http://apple.com" target="_blank"><img src="images/img-03.jpg" /></a></li>
                 </ul>
                 <ul class="tab-panel">
-                    <li class="w980h490" style="top:0;left:0;"><a href="http://www.leshi1.com/xiaojz" target="_blank"><img src="images/img-04.jpg" /></a></li>
+                    <li class="w980h490" style="top:0;left:0;"><a href="http://apple.com" target="_blank"><img src="images/img-04.jpg" /></a></li>
                 </ul>
               </div>
           </div>
