--- a/app/Tpl/fanwe/mobile/inc/mobile_header.html
+++ b/app/Tpl/fanwe/mobile/inc/mobile_header.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="format-detection" content="telephone=no" />
     <meta name="keywords" content="微店,品牌店铺,商盟" />
-    <meta name="description" content="本地一体化店铺系统 ,乐时网演示站" />
-    <title>微店 -  乐时网演示站 -  手机版</title>
+    <meta name="description" content="本地一体化店铺系统 ,M网演示站" />
+    <title>M网 -  手机版</title>
     <?php
     $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/mobile_style.css";
     $this->_var['pagecss'][] = $this->_var['TMPL_REAL']."/css/waterfall.css";
