--- a/app/Tpl/fanwe/mobile/mobile_user_login.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_login.html
@@ -22,7 +22,7 @@
                         </div>
                         <div class="failure" id="summary"><ul></ul></div>
                         <div class="button-wrapper command">
-                            <button class="sign-button submit" type="submit">登录乐时网</button>
+                            <button class="sign-button submit" type="submit">登录M网</button>
                         </div>
                         <div class="weibo-signup-wrapper" style="display: none;">
                             社交帐号登录 &nbsp;
