--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="failure" id="summary"><ul></ul></div>
                         <div class="button-wrapper command">
-                            <button class="sign-button submit" type="submit">注册乐时网</button>
+                            <button class="sign-button submit" type="submit">注册M网</button>
                         </div>
                         <div class="weibo-signup-wrapper" style="display: none;">
                             社交帐号登录 &nbsp;
@@ -68,7 +68,7 @@
 
             <div class="mobi-front" style="display: none;">
                 <div class="button-wrapper">
-                    <button class="sign-button js-signin" type="submit">登录乐时网</button>
+                    <button class="sign-button js-signin" type="submit">登录M网</button>
                 </div>
 
                 <div class="button-wrapper">
