--- a/app/Tpl/fanwe/mobile/mobile_index.html
+++ b/app/Tpl/fanwe/mobile/mobile_index.html
@@ -48,7 +48,8 @@
                 <div class="info">
                     <img src="{{img}}" width="100%" height="auto" style="height:auto" />
                     <h2>{{title}}</h2>
-                    <h4><strong>￥{{current_price}}</strong><span>￥{{origin_price}}</span></h4>
+                    <h2><strong style="color:#f60;">￥{{current_price}}</strong><span style="display:none;">￥{{origin_price}}</span></h2>
+                    <h2><strong style="color:#f60;">积分价:{{price_score}}</strong></h2>
                 </div>
             </div>
             {{/result}}
