--- a/app/Tpl/fanwe/mobile/mobile_user_login.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_login.html
@@ -5,14 +5,14 @@
     <div class="top" style="padding-top: 50px;">
         <div class="inner-wrapper">
             <div class="form-wrapper" id="js-form-wrapper">
-                <span style="display:block; margin: 0 auto; width:185px; height:65px; background:url(http://leshi.lo/public/attachment/201011/4cdd501dc023b.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=http://leshi.lo/public/attachment/201011/4cdd501dc023b.png, sizingMethod=scale);_background-image:none;"></span>
+                <span style="display:block; margin: 0 auto; width:185px; height:65px; background:url(/app/Tpl/fanwe/images/mobile/logo-large.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=http://leshi.lo/public/attachment/201011/4cdd501dc023b.png, sizingMethod=scale);_background-image:none;"></span>
 
                 <div id="js-sign-flow" class="desk-front sign-flow clearfix" style="display: block;">
                     <div class="view view-signup selected">
                         <form class="zu-side-login-box" action="{url x="shop" r="user#dologin"}" id="sign-form-1" autocomplete="off" novalidate_bak="novalidate" method="post">
                         <div class="title">
-                            <a class="js-signin signin-switch with-icon" href="#signin">注册<i class="icon-sign icon-sign-arrow"></i></a>
-                            <a class="with-icon return"><i class="icon-sign icon-sign-arrow-l"></i><span class="js-title-label">返回</span></a>
+                            <a class="js-signin signin-switch with-icon" href="#signin" href="{url x="shop" r="user#register"}">注册<i class="icon-sign icon-sign-arrow"></i></a>
+                            <a class="with-icon return" onclick="history.go(-1);"><i class="icon-sign icon-sign-arrow-l"></i><span class="js-title-label">返回</span></a>
                         </div>
                         <div class="name input-wrapper">
                             <input required="" type="text" name="email" placeholder="邮箱/帐号">
