--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -5,7 +5,7 @@
     <div class="top" style="padding-top: 50px;">
     <div class="inner-wrapper">
         <div class="form-wrapper" id="js-form-wrapper">
-            <span style="display:block; margin: 0 auto; width:185px; height:65px; background:url(http://leshi.lo/public/attachment/201011/4cdd501dc023b.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=http://leshi.lo/public/attachment/201011/4cdd501dc023b.png, sizingMethod=scale);_background-image:none;"></span>
+            <span style="display:block; margin: 0 auto; width:185px; height:65px; background:url(/app/Tpl/fanwe/images/mobile/logo-large.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=http://leshi.lo/public/attachment/201011/4cdd501dc023b.png, sizingMethod=scale);_background-image:none;"></span>
 
             <div id="js-sign-flow" class="desk-front sign-flow clearfix" style="display: block;">
                 <div class="view view-signup selected">
