--- a/app/Tpl/fanwe/mobile/mobile_user_login.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_login.html
@@ -11,7 +11,7 @@
                     <div class="view view-signup selected">
                         <form class="zu-side-login-box" action="{url x="shop" r="user#dologin"}" id="sign-form-1" autocomplete="off" novalidate_bak="novalidate" method="post">
                         <div class="title">
-                            <a class="js-signin signin-switch with-icon" href="#signin" href="{url x="shop" r="user#register"}">注册<i class="icon-sign icon-sign-arrow"></i></a>
+                            <a class="js-signin signin-switch with-icon" href="{url x="shop" r="user#register"}">注册<i class="icon-sign icon-sign-arrow"></i></a>
                             <a class="with-icon return" onclick="history.go(-1);"><i class="icon-sign icon-sign-arrow-l"></i><span class="js-title-label">返回</span></a>
                         </div>
                         <div class="name input-wrapper">
