--- a/app/Tpl/fanwe/mobile/mobile_user_login.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_login.html
@@ -2,7 +2,7 @@
 <body id="cis_list">
 <div class="body">
     {include file="mobile/inc/header_feature1.html"}
-    <div class="top" style="padding-top: 50px;">
+    <div class="top" style="padding-top: 50px;background: url(http://sj.m-ebuy.com/assets/images/banner.jpg)no-repeat; background-size: cover;">
         <div class="inner-wrapper">
             <div class="form-wrapper" id="js-form-wrapper">
                 <span style="display:block; margin: 0 auto; width:185px; height:65px; background:url(/app/Tpl/fanwe/images/mobile/logo-large.png) no-repeat; _filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src=http://leshi.lo/public/attachment/201011/4cdd501dc023b.png, sizingMethod=scale);_background-image:none;"></span>
