--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -53,6 +53,75 @@
                         <div class="input-wrapper">
                             <input required="" type="text" name="mobile" placeholder="手机号码">
                         </div>
+                        <div class="input-wrapper">
+                            <input required="" type="text" name="vcode" placeholder="手机验证码" style=" width: 50%; ">
+                            <input type="button" id="vcode-btn" onclick="sms_send()" value="发送验证码" style="
+    display: inline-block;
+    padding: 0;
+    width: 48%;
+    font-size: 15px;
+    line-height: 33px;
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 1px rgba(0,0,0,.2);
+    background: #80C3F7;
+    background:
+    -webkit-gradient(linear,left top,left bottom,from(#80c3f7),to(#6bbaf8));
+    border: 1px solid #1D80CF;
+    border-radius: 5px;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.3),0 1px 1px rgba(50,50,50,.05);
+    outline: 0;
+    cursor: pointer;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+" />
+                        </div>
+                        <script>
+                            var sms_send = function () {
+                                $('#vcode-btn').attr('disabled', 'disabled');
+                                $.ajax({
+                                    url: "/shop.php?ctl=ajax&act=sms_register",
+                                    type: "get",
+                                    data: {'mobile': $('input[name=mobile]').val()},
+                                    success: function (json) {
+                                        json = eval("("+json+")");
+                                        if (json.state == "error") {
+                                            $('#vcode-btn').val('发送验证码');
+                                            $('#vcode-btn').removeAttr('disabled');
+                                            alert(json.message);
+                                        }
+                                        if (json.state == "success") {
+                                            $('#vcode-btn').attr('disabled', 'disabled');
+                                            countdown();
+                                        }
+
+                                    }
+                                });
+                            }
+                            var countdown = function () {
+                                var timer = 60;
+                                var interval = setInterval(function () {
+                                    if (timer > 0) {
+                                        $('#vcode-btn').val(timer+"秒后再次发送");
+                                        timer --;
+                                    } else {
+                                        myclear();
+                                        $('#vcode-btn').val("发送验证码");
+                                        $('#vcode-btn').removeAttr('disabled');
+                                    }
+                                }, 1000);
+                                if (timer <= 0) {
+                                    clearInterval(interval);
+                                    $('#vcode-btn').val("发送验证码");
+                                    $('#vcode-btn').removeAttr('disabled');
+                                }
+                            }
+                            var myclear = function () {
+                                for (var i = 1; i < 99999; i++)
+                                    clearInterval(i);
+                                $('#vcode-btn').val("发送验证码");
+                                $('#vcode-btn').removeAttr('disabled');
+                            }
+                        </script>
                         <div class="failure" id="summary"><ul></ul></div>
                         <div class="button-wrapper command">
                             <button class="sign-button submit" type="submit">注册M网</button>
