--- a/app/Tpl/fanwe/mobile/mobile_user_register.html
+++ b/app/Tpl/fanwe/mobile/mobile_user_register.html
@@ -54,7 +54,7 @@
                             <input required="" type="text" name="mobile" placeholder="手机号码">
                         </div>
                         <div class="input-wrapper">
-                            <input required="" type="text" name="vcode" placeholder="手机验证码" style=" width: 50%; ">
+                            <input required="" type="text" name="code" placeholder="手机验证码" style=" width: 50%; ">
                             <input type="button" id="vcode-btn" onclick="sms_send()" value="发送验证码" style="
     display: inline-block;
     padding: 0;
